Replace static_assert with #error in DataLog.cpp https://bugs.webkit.org/show_bug.cgi?id=275070 rdar://129177831

Reviewed by Philippe Normand.

Using `static_assert` means that a `0 && 0` survives past preprocessor
time, which causes gcc's `-Wconstant-logical-operand` to raise a
warning. Using #if + #error means that this will be cleaned out by the
preprocessor instead, avoiding that warning.

* Source/WTF/wtf/DataLog.cpp:

Canonical link: https://commits.webkit.org/279679@main